[package]
name = "blacky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
strip = true
opt-level = "z"
lto = true
panic = "abort"

[build-dependencies]
static_vcruntime = "2.0"

[dependencies]
winapi = { version = "0.3.9", features = ["fileapi", "winnt", "winuser", "processthreadsapi", "winbase", "handleapi"] }
static_vcruntime = "2.0.0"
zip = "0.6.6"